# reactive-tui

./: .gitattributes  .gitignore  .releaserc.json  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  browser.js  build.rs  example-usage.ts  generate_types  index.d.ts  index.js  licenses-report.html  package-lock.json  package.json  reactive-tui.wasi-browser.js  reactive-tui.wasi.cjs  test-integration.js  test-typescript.ts  tsconfig.json
.claude/: last_snapshot  last_snapshot_name  last_snapshot_timestamp
.claude/snapshot_metadata/: 1754174421.json  1754174446.json  1754174490.json  latest.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: CI.yml  ci.yml  deploy-docs.yml  manual-release.yml  manual.yml  opencode.yml  release.yml  semantic-release.yml
__test__/: comprehensive.spec.ts  performance.spec.ts
assets/: logo.xcf
bindings/: types.ts
bindings/Element.ts/: Element.ts  ElementKeyBinding.ts
bindings/ElementKeyBinding.ts/: ElementAction.ts
bindings/KeyCombination.ts/: KeyCombination.ts
crate-docs/: all.html  index.html  macro.action.html  macro.create_plugin!.html  macro.create_plugin.html  macro.impl_reactive_struct!.html  macro.impl_reactive_struct.html  macro.reactive!.html  macro.reactive.html  macro.register_widget_type!.html  macro.register_widget_type.html  sidebar-items.js
crate-docs/app/: index.html  sidebar-items.js  struct.TuiApp.html  struct.TuiAppBuilder.html
crate-docs/compat/: enum.Attribute.html  enum.ClearType.html  enum.Color.html  enum.KeyCode.html  enum.KeyEventKind.html  enum.MediaKeyCode.html  enum.ModifierKeyCode.html  enum.MouseButton.html  enum.MouseEventKind.html  index.html  sidebar-items.js  struct.Clear.html  struct.Hide.html  struct.KeyEvent.html  struct.KeyEventState.html  struct.KeyModifiers.html  struct.MouseEvent.html  struct.MoveTo.html  struct.Print.html  struct.ResetColor.html  struct.SetAttribute.html  struct.SetBackgroundColor.html  struct.SetForegroundColor.html  struct.Show.html  trait.Command.html  trait.IsTty.html
crate-docs/components/: fn.border.html  fn.button.html  fn.button_widget.html  fn.center.html  fn.code.html  fn.container.html  fn.danger_button.html  fn.div.html  fn.flex_column.html  fn.flex_row.html  fn.footer.html  fn.header.html  fn.hr.html  fn.input.html  fn.left.html  fn.line.html  fn.list.html  fn.main.html  fn.padding.html  fn.pre.html  fn.primary_button.html  fn.right.html  fn.secondary_button.html  fn.section.html  fn.separator.html  fn.spacer.html  fn.span.html  fn.text.html  index.html  sidebar-items.js  struct.Props.html  trait.Component.html
crate-docs/css/: enum.Selector.html  index.html  sidebar-items.js  struct.ComponentNode.html  struct.ComponentTree.html  struct.CssEngine.html  struct.CssRule.html  struct.Stylesheet.html
crate-docs/display/: enum.ColorDepth.html  enum.ConnectionType.html  index.html  sidebar-items.js  struct.AdaptiveConfig.html  struct.AdaptiveFpsManager.html  struct.DisplayCapabilities.html  struct.PerformanceMetrics.html  struct.PerformanceProfile.html  struct.SyncCapabilities.html  struct.TerminalInfo.html
crate-docs/driver/: enum.DriverEvent.html  enum.DriverType.html  enum.KeyCode.html  enum.KeyEventKind.html  enum.MediaKeyCode.html  enum.ModifierKeyCode.html  enum.MouseButton.html  enum.MouseEventKind.html  index.html  sidebar-items.js  struct.DriverCapabilities.html  struct.DriverConfig.html  struct.DriverManager.html  struct.KeyEvent.html  struct.KeyEventState.html  struct.KeyModifiers.html  struct.MouseEvent.html  trait.Driver.html
crate-docs/error/: enum.TuiError.html  index.html  sidebar-items.js  type.Result.html
crate-docs/events/: enum.Event.html  index.html  sidebar-items.js  struct.EventHandler.html  type.EventCallback.html
crate-docs/layout/: enum.AlignItems.html  enum.DisplayType.html  enum.FlexDirection.html  enum.JustifyContent.html  enum.PositionType.html  enum.SizeValue.html  index.html  sidebar-items.js  struct.ComputedStyles.html  struct.Layout.html  struct.LayoutEngine.html  struct.LayoutRect.html  struct.Spacing.html
crate-docs/plugin/: enum.PluginCapability.html  enum.PluginEvent.html  enum.PluginResponse.html  index.html  sidebar-items.js  struct.PluginContext.html  struct.PluginDependency.html  struct.PluginManager.html  struct.PluginMetadata.html  struct.WidgetConfig.html  trait.Plugin.html  trait.WidgetPlugin.html
crate-docs/prelude/: index.html
crate-docs/reactive/: index.html  sidebar-items.js  struct.Reactive.html  struct.ReactiveChange.html  struct.ReactiveComponent.html  struct.ReactiveState.html  struct.StateChange.html  (+5 more)
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
examples/: accordion_demo.rs  adaptive_fps_demo.rs  animation_demo.rs  autocomplete_demo.rs  bar_demo.rs  button_demo.rs  checkbox_demo.rs  component_manager_demo.rs  css_styling_demo.rs  datatable_demo.rs  drag_drop_demo.rs  event_routing_demo.rs  ffi_integration_test.rs  flickering_test.rs  fps_benchmark.rs  grid_demo.rs  image_sixel_demo.rs  input_demo.rs  input_interactive_demo.rs  keyframe_demo.rs  layout_demo.rs  layout_showcase.rs  layout_visual_demo.rs  menu_demo.rs  modal_demo.rs  moden_animation_demo.rs  modern_api_demo.rs  multiscreen_basic_demo.rs  multiscreen_demo.rs  multiscreen_simple_demo.rs  naming_convention_test.rs  performance_demo.rs  plugin_demo.rs  plugin_demo_simple.rs  plugin_showcase.rs  progress_demo.rs  radio_demo.rs  reactive_integration_demo.rs  rich_text_demo.rs  scrollable_list_demo.rs  (+13 more)
guide/: Cargo.toml  README.md
guide/src/: lib.rs  registry.rs  state.rs
guide/styles/: guide.css
reactive-tui-guide/: Cargo.toml
reactive-tui-ts/: CHANGELOG.md  EXAMPLES_GUIDE.md  GETTING_STARTED.md  README.md  example.ts  package.json  run-example.ts  tsconfig.json
src/: app.rs  compat.rs  error.rs  ffi.rs  lib.rs  plugin.rs  reactive.rs  recovery.rs
tests/: ffi_node_smoke.rs  headless_diff.rs  headless_diff_minimal.rs  headless_diff_more.rs  headless_e2e.rs  snapshot_background.rs  unicode_text_widgets.rs  unix_signal_helpers.rs
tutorials/: README.md
(+1166 files in other folders)
