
[package]
name = "reactive_tui"
version = "0.0.1"
edition = "2021"
description = "Revolutionary CSS-styled Terminal User Interface framework with NAPI bindings"
license = "Apache License Version 2.0"
authors = ["Shawn McAllister  @entrepreneur4lyf"]
repository = "https://github.com/entrepeneur4lyf/reactive-tui"

[lib]
name = "reactive_tui"
crate-type = ["cdylib", "rlib"]


[dependencies]
# Terminal handling
crossterm = "0.29"

# Unicode characters and unicode security
unicode-rs = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy initialization
once_cell = "1.20"

# Terminal detection
is-terminal = "0.4"

# Async runtime
tokio = { version = "^1.4", features = ["full"] }
async-trait = "0.1"

# CSS & Layout
taffy = { version = "^0.8" }
cssparser = { version = "^0.35" }

# File watching for hot reload
notify = { version = "^8.0", optional = true }

# FFI bindings for Bun/Node - Using compatible versions
napi = { version = "3.1.2", features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "3.1.2", optional = true }

# TypeScript type generation
ts-rs = { version = "11.0.1", optional = true }

# Rich text editor dependencies
markdown = "1.0"
inkjet = "0.11"

# Form validation dependencies
regex = "1.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["css"]
css = []  # CSS is no longer optional, always included
hot-reload = ["dep:notify"]
ffi = ["dep:napi", "dep:napi-derive"]  # FFI feature gates NAPI dependencies
typescript = ["dep:ts-rs"]

[build-dependencies]
napi-build = "2"
ts-rs = { version = "11.0.1", optional = true }

[profile.release]
lto = true
strip = "symbols"

# Keep this package independent from the parent workspace
[workspace]
