
[package]
name = "reactive_tui"
version = "0.0.1"
edition = "2021"
description = "Revolutionary CSS-styled Terminal User Interface framework with NAPI bindings"
license = "Apache License Version 2.0"
authors = ["Shawn McAllister  @entrepreneur4lyf"]
repository = "https://github.com/entrepeneur4lyf/reactive-tui"

[lib]
name = "reactive_tui"
crate-type = ["cdylib", "rlib"]


[dependencies]
# Unicode characters and unicode security
unicode-rs = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy initialization
once_cell = "1.20"

# Terminal detection
is-terminal = "0.4"

# Async runtime
async-trait = "0.1"

# CSS & Layout
taffy = { version = "^0.8" }
cssparser = { version = "^0.35" }

# File watching for hot reload
notify = { version = "^8.0", optional = true }

# TypeScript type generation
ts-rs = { version = "11.0.1", optional = true }

# Rich text editor dependencies
markdown = "1.0"

# Non-WASM dependencies (native platforms)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
crossterm = "0.29"
tokio = { version = "^1.4", features = ["full"] }
syntect = "5.1"
regex = "1.0"
libc = "0.2"
napi = { version = "3.1.2", features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "3.1.2", optional = true }

# WASM-compatible dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "^1.4", features = ["sync", "macros", "io-util", "rt", "time"] }
regex-lite = "0.1"  # WASM-compatible regex alternative
bitflags = "2.6"  # For KeyModifiers bitflags

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
] }


[features]
default = ["css"]
css = []  # CSS is no longer optional, always included
hot-reload = ["dep:notify"]
ffi = ["napi", "napi-derive"]  # FFI feature gates NAPI dependencies
typescript = ["dep:ts-rs"]
napi = ["dep:napi"]
napi-derive = ["dep:napi-derive"]

[build-dependencies]
napi-build = "2"
ts-rs = { version = "11.0.1", optional = true }

[profile.release]
lto = true
strip = "symbols"

# Keep this package independent from the parent workspace
[workspace]
