
[package]
name = "reactive_tui"
version = "0.0.5"
edition = "2021"
description = "Revolutionary CSS-styled Terminal User Interface framework with Rust/TypeScript hybrid architecture"
license = "BUSL-1.1"
authors = ["Shawn McAllister <@entrepeneur4lyf>"]
repository = "https://github.com/entrepeneur4lyf/reactive-tui"
homepage = "https://reactive-tui.com"
documentation = "https://docs.rs/reactive-tui"
readme = "README.md"
keywords = ["tui", "terminal", "css", "widgets", "ui"]
categories = ["command-line-interface", "gui", "web-programming"]
exclude = [
    "docs/*",
    "__test__/*",
    "node_modules/*",
    "*.node",
    "*.js",
    "*.d.ts"
]

[lib]
name = "reactive_tui"
crate-type = ["rlib", "cdylib"]

# docs.rs configuration
[package.metadata.docs.rs]
features = []
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Unicode characters and unicode security
unicode-rs = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy initialization
once_cell = "1.20"

# Terminal detection
is-terminal = "0.4"

# Async runtime
async-trait = "0.1"
tokio = { version = "^1.4", features = ["full"] }

# CSS & Layout
taffy = { version = "^0.8" }
cssparser = { version = "^0.35" }

# File watching for hot reload
notify = { version = "^8.0", optional = true }

# TypeScript type generation
ts-rs = { version = "11.0.1", optional = true }

# Rich text editor dependencies
markdown = "1.0"

# Image processing dependencies
image = { version = "0.25", optional = true }
a-sixel = { version = "0.5.1", optional = true }
unicode-segmentation = "1.10"

# Terminal and system dependencies
crossterm = "0.29"
syntect = "5.1"
regex = "1.0"
libc = "0.2"

# NAPI bindings (optional for FFI)
napi = { version = "3.1.2", features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "3.1.2", optional = true }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
] }


[features]
default = ["css"]
css = []  # CSS is no longer optional, always included
hot-reload = ["dep:notify"]
images = ["dep:image", "dep:a-sixel"]  # Image widget with Sixel support
ffi = ["napi", "napi-derive", "dep:napi-build"]  # FFI feature gates NAPI dependencies
typescript = ["dep:ts-rs"]
napi = ["dep:napi"]
napi-derive = ["dep:napi-derive"]
crossterm = []

[build-dependencies]
napi-build = { version = "2", optional = true }
ts-rs = { version = "11.0.1", optional = true }

[profile.release]
lto = true
strip = "symbols"

# Keep this package independent from the parent workspace
[workspace]
