[package]
name = "reactive-tui-guide"
version = "0.1.0"
edition = "2021"
description = "Interactive Widget Guide for Reactive TUI Framework"
license = "BUSL-1.1"
authors = ["Shawn McAllister <@entrepeneur4lyf>"]
repository = "https://github.com/entrepeneur4lyf/reactive-tui"
homepage = "https://reactive-tui.com"
documentation = "https://docs.rs/reactive-tui"
readme = "README.md"
keywords = ["tui", "terminal", "guide", "widgets", "demo"]
categories = ["command-line-interface", "gui"]

[[bin]]
name = "reactive-tui-guide"
path = "src/bin/main.rs"

[dependencies]
# Core framework dependency
reactive_tui = { path = "..", features = ["css", "images", "hot-reload"] }

# Async runtime
tokio = { version = "1.4", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Image support for splash screen logo
a-sixel = "0.5.1"
image = "0.25"

# Text processing
markdown = "1.0"
syntect = "5.1"
regex = "1.0"

# System utilities
uuid = { version = "1.17.0", features = ["v4"] }
once_cell = "1.20"

# Terminal handling
crossterm = "0.29"

# Logging
env_logger = "0.11"

[features]
default = ["images", "performance-monitoring"]
images = []
performance-monitoring = []
debug-mode = []

[profile.release]
lto = true
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
